--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  multiselect_formfield: ^0.1.0 
+  #flutter_multiselect: 0.0.1
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.0+1
