--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^0.13.0+1
   cupertino_icons: ^0.1.2
+  firebase_auth: ^0.14.0+5
   shared_preferences: ^0.5.6+3
 
 dev_dependencies:
