--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 *.iml
 *.ipr
 *.iws
-.idea/
+peer_programing/.idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -22,16 +22,17 @@
 
 # Flutter/Dart/Pub related
 **/doc/api/
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.packages
-.pub-cache/
-.pub/
-/build/
+peer_programing/.dart_tool
+peer_programing/.flutter-plugins
+peer_programing/.flutter-plugins-dependencies
+peer_programing/.packages
+peer_programing/.pub-cache/
+peer_programing/.pub/
+peer_programing/build/
+peer_programing/pubspec.lock
 
 # Web related
-lib/generated_plugin_registrant.dart
+peer_programing/lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
