--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -6,7 +6,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^0.13.0+1
+  cloud_firestore: ^0.13.5
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.6+3
 
