--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.6+3
+  progress_indicators: ^0.1.5
 
 dev_dependencies:
   flutter_test:
