--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -4,14 +4,15 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.1.0 <3.0.0"
 dependencies:
-  multiselect_formfield: ^0.1.0 
-  flutter_multiselect: 0.0.1
+  multiselect_formfield: ^0.1.2
+  # flutter_multiselect: 0.0.1
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.5
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.6+3
   progress_indicators: ^0.1.5
+  smooth_star_rating: 1.0.3
 
 dev_dependencies:
   flutter_test:
