--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -5,6 +5,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 dependencies:
   multiselect_formfield: ^0.1.2
+  searchable_dropdown: ^1.1.3
   # flutter_multiselect: 0.0.1
   flutter:
     sdk: flutter
