--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -6,7 +6,6 @@ environment:
 dependencies:
   multiselect_formfield: ^0.1.2
   searchable_dropdown: ^1.1.3
-  # flutter_multiselect: 0.0.1
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.5
@@ -15,6 +14,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   progress_indicators: ^0.1.5
   smooth_star_rating: 1.0.3
+  connectivity: '>=0.4.8 <2.0.0'
 
 dev_dependencies:
   flutter_test:
