Initial chatbot layout and basic functionality

--- a/peer_programing/pubspec.yaml
+++ b/peer_programing/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   progress_indicators: ^0.1.5
   smooth_star_rating: 1.0.3
   connectivity: '>=0.4.8 <2.0.0'
+  flutter_dialogflow: ^0.1.2
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +26,4 @@ flutter:
   uses-material-design: true
   assets:
     - 'images/avatar-default-icon.png'
+    - 'assets/DialogCredentials.json'
